[gd_scene load_steps=3 format=3 uid="uid://71oepqubn8y0"]

[ext_resource type="Script" path="res://scene/entity/edible_developer.gd" id="1_vioye"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_46y36"]
radius = 23.0
height = 98.0

[node name="EdibleDeveloper" type="Area2D"]
script = ExtResource("1_vioye")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_46y36")

[node name="DevNameLabel" type="Label" parent="."]
offset_left = -37.0
offset_top = -70.0
offset_right = 44.0
offset_bottom = -47.0
text = "Dev Name"

[node name="TitleLabel" type="Label" parent="."]
offset_left = -32.0
offset_top = 47.0
offset_right = 36.0
offset_bottom = 70.0
text = "Dev Title"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
